src/test/ui/parser/bad-fn-ptr-qualifier.stderr
error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:5:15
   |
LL | pub type T3 = async fn();
   |               -----^^^^^
   |               |
   |               `async` because of this
   |               help: remove the `async` qualifier

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:6:15
   |
LL | pub type T4 = async extern fn();
   |               -----^^^^^^^^^^^^
   |               |
   |               `async` because of this
   |               help: remove the `async` qualifier

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:7:15
   |
LL | pub type T5 = async unsafe extern "C" fn();
   |               -----^^^^^^^^^^^^^^^^^^^^^^^
   |               |
   |               `async` because of this
   |               help: remove the `async` qualifier

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:9:17
   |
LL | pub type FTT3 = for<'a> async fn();
   |                 ^^^^^^^^-----^^^^^
   |                         |
   |                         `async` because of this
   |                         help: remove the `async` qualifier

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:10:17
   |
LL | pub type FTT4 = for<'a> async extern fn();
   |                 ^^^^^^^^-----^^^^^^^^^^^^
   |                         |
   |                         `async` because of this
   |                         help: remove the `async` qualifier

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:11:17
   |
LL | pub type FTT5 = for<'a> async unsafe extern "C" fn();
   |                 ^^^^^^^^-----^^^^^^^^^^^^^^^^^^^^^^^
   |                         |
   |                         `async` because of this
   |                         help: remove the `async` qualifier

error: aborting due to 6 previous errors

